Start skills page Remove cls from projects image Reset Safari vh fixes Add profile image overlay Align size of index images

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -37,6 +37,7 @@ body {
 section {
   padding: 0 6rem 6rem;
   transition: height 0.3s ease;
+  overflow: auto;
 
   @media only screen and (max-width: 1100px) {
     height: calc(var(--app-height) - 12rem);
